--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/mensageria
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
+
+
+spring.jackson.serialization.write-dates-as-timestamps: false
