Atualizando pra funcionar no heroku

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,17 @@ overridedb.*
 .factorypath
 dump.rdb
 transaction-logs
+
+# Build Artifacts
+
+.gradle/
+build/
+target/
+bin/
+dependency-reduced-pom.xml
+
+# Eclipse Project Files
+
+.classpath
+.project
+.settings/
