--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -1,6 +1,6 @@
-#spring.datasource.url=jdbc:postgresql://localhost:5432/mensageria
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jackson.serialization.write-dates-as-timestamps: false
