--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=${URL_DATABASE}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
