Alterando para create

--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=${URL_DATABASE}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 
 spring.jackson.serialization.write-dates-as-timestamps: false
