--- a/application.yml
+++ b/application.yml
@@ -1,5 +1,5 @@
 spring:
-  jpa.hibernate.ddl-auto=update
+  jpa.hibernate.ddl-auto=create
   datasource:
     driverClassName: org.postgresql.Driver
     url: ${JDBC_DATABASE_URL}
