--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create
 
-server.port=${PORT:8080}
+server.port=${PORT}
 
 
 spring.jackson.serialization.write-dates-as-timestamps: false
