mudança do formato das datas

--- a/application.yml
+++ b/application.yml
@@ -8,6 +8,9 @@ spring:
   jpa:
     database: POSTGRESQL
     hibernate:
-        ddl-auto: create-drop
+      ddl-auto: create-drop
   server:
     port: ${PORT}
+  jackson:
+    serialization:
+      write-dates-as-timestamps: false
