alterando ddl-auto para update

--- a/application.yml
+++ b/application.yml
@@ -8,7 +8,7 @@ spring:
   jpa:
     database: POSTGRESQL
     hibernate:
-        ddl-auto: create-drop
+        ddl-auto: update
   server:
     port: ${PORT}
   jackson:
